need to fix white space, removed react parallax

--- a/vite-project/src/assets/styles/App.css
+++ b/vite-project/src/assets/styles/App.css
@@ -6,8 +6,27 @@
   /* Adding space on all sides (top, right, bottom, left) of the element. */
   padding: 0;
   /* Center-aligning the text within the element. */
+  box-sizing: border-box;
   text-align: center;
 }
+
+body, html {
+  padding: 0;
+  margin: 0;
+}
+
+.my-scene, .home, .nav {
+  margin: 0;
+  padding: 0;
+}
+
+/* .App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+} */
+
 
 /* Keyframes for a spinning animation. */
 @keyframes logo-spin {
